; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_sys_generic.c_seldrop.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_sys_generic.c_seldrop.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.proc = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.proc*, i32*, i32)* @seldrop to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @seldrop(%struct.proc* %0, i32* %1, i32 %2) #0 {
  %4 = alloca %struct.proc*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store %struct.proc* %0, %struct.proc** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32 %2, i32* %6, align 4
  store i32 0, i32* %8, align 4
  %9 = load %struct.proc*, %struct.proc** %4, align 8
  %10 = call i32 @proc_fdlock(%struct.proc* %9)
  %11 = load %struct.proc*, %struct.proc** %4, align 8
  %12 = load i32*, i32** %5, align 8
  %13 = load i32, i32* %6, align 4
  %14 = load i32, i32* %6, align 4
  %15 = call i32 @seldrop_locked(%struct.proc* %11, i32* %12, i32 %13, i32 %14, i32* %8, i32 0)
  store i32 %15, i32* %7, align 4
  %16 = load %struct.proc*, %struct.proc** %4, align 8
  %17 = call i32 @proc_fdunlock(%struct.proc* %16)
  %18 = load i32, i32* %8, align 4
  %19 = icmp ne i32 %18, 0
  br i1 %19, label %20, label %24

20:                                               ; preds = %3
  %21 = load %struct.proc*, %struct.proc** %4, align 8
  %22 = getelementptr inbounds %struct.proc, %struct.proc* %21, i32 0, i32 0
  %23 = call i32 @wakeup(i32* %22)
  br label %24

24:                                               ; preds = %20, %3
  %25 = load i32, i32* %7, align 4
  ret i32 %25
}

declare dso_local i32 @proc_fdlock(%struct.proc*) #1

declare dso_local i32 @seldrop_locked(%struct.proc*, i32*, i32, i32, i32*, i32) #1

declare dso_local i32 @proc_fdunlock(%struct.proc*) #1

declare dso_local i32 @wakeup(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
